# startup_flask_app

./: LICENSE  README.md  flask-setup.py  pyproject.toml  setup.py  setup.txt
.github/workflows/: python-publish.yml
Flask_Create/: flask-setup.py
create_at_flask.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  main.py
