[project]
name = "startup_flask_app"
version = "4.0.1"
authors = [
  { name="Ebire Folayemi", email="folayemiebire@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArcadeDesigns/startup_flask_app"
"Bug Tracker" = "https://github.com/ArcadeDesigns/startup_flask_app/issues"
